[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Miscellaneous/barOutline.png" type="Texture" id=1]
[ext_resource path="res://UI/Game Stats/Game Stats.gd" type="Script" id=2]
[ext_resource path="res://Assets/Miscellaneous/Theme.tres" type="Theme" id=3]
[ext_resource path="res://Assets/Miscellaneous/hpBar.png" type="Texture" id=4]
[ext_resource path="res://Assets/Miscellaneous/mpBar.png" type="Texture" id=5]

[node name="GameStats" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 800.0
margin_top = 768.0
rect_min_size = Vector2( 1120, 312 )
theme = ExtResource( 3 )
script = ExtResource( 2 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0235294, 0.0313726, 0.101961, 1 )

[node name="GameStatsContainer" type="MarginContainer" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0

[node name="GameStatsColumns" type="HBoxContainer" parent="Background/GameStatsContainer"]
margin_right = 1105.0
margin_bottom = 292.0

[node name="DetailsContainer" type="VBoxContainer" parent="Background/GameStatsContainer/GameStatsColumns"]
margin_right = 377.0
margin_bottom = 292.0
rect_min_size = Vector2( 363, 0 )

[node name="HPContainer" type="HBoxContainer" parent="Background/GameStatsContainer/GameStatsColumns/DetailsContainer"]
margin_right = 377.0
margin_bottom = 32.0
rect_min_size = Vector2( 377, 0 )

[node name="HP" type="Label" parent="Background/GameStatsContainer/GameStatsColumns/DetailsContainer/HPContainer"]
margin_top = 6.0
margin_right = 28.0
margin_bottom = 26.0
rect_min_size = Vector2( 28, 0 )
text = "HP"

[node name="HPAmount" type="TextureProgress" parent="Background/GameStatsContainer/GameStatsColumns/DetailsContainer/HPContainer"]
margin_left = 32.0
margin_right = 377.0
margin_bottom = 32.0
rect_min_size = Vector2( 345, 0 )
value = 50.0
texture_under = ExtResource( 1 )
texture_over = ExtResource( 1 )
texture_progress = ExtResource( 4 )

[node name="MPContainer" type="HBoxContainer" parent="Background/GameStatsContainer/GameStatsColumns/DetailsContainer"]
margin_top = 36.0
margin_right = 377.0
margin_bottom = 68.0
rect_min_size = Vector2( 377, 0 )

[node name="MP" type="Label" parent="Background/GameStatsContainer/GameStatsColumns/DetailsContainer/MPContainer"]
margin_top = 6.0
margin_right = 28.0
margin_bottom = 26.0
rect_min_size = Vector2( 28, 0 )
text = "MP"

[node name="MPAmount" type="TextureProgress" parent="Background/GameStatsContainer/GameStatsColumns/DetailsContainer/MPContainer"]
margin_left = 32.0
margin_right = 377.0
margin_bottom = 32.0
rect_min_size = Vector2( 345, 0 )
value = 50.0
texture_under = ExtResource( 1 )
texture_over = ExtResource( 1 )
texture_progress = ExtResource( 5 )

[node name="LevelContainer" type="HBoxContainer" parent="Background/GameStatsContainer/GameStatsColumns/DetailsContainer"]
margin_top = 72.0
margin_right = 377.0
margin_bottom = 92.0
rect_min_size = Vector2( 377, 0 )

[node name="LevelText" type="Label" parent="Background/GameStatsContainer/GameStatsColumns/DetailsContainer/LevelContainer"]
margin_right = 250.0
margin_bottom = 20.0
rect_min_size = Vector2( 250, 0 )
text = "Level"

[node name="Level" type="Label" parent="Background/GameStatsContainer/GameStatsColumns/DetailsContainer/LevelContainer"]
margin_left = 254.0
margin_right = 377.0
margin_bottom = 20.0
rect_min_size = Vector2( 123, 0 )
text = "0"
align = 2

[node name="CritterNameContainer" type="HBoxContainer" parent="Background/GameStatsContainer/GameStatsColumns/DetailsContainer"]
margin_top = 96.0
margin_right = 377.0
margin_bottom = 116.0
rect_min_size = Vector2( 377, 0 )

[node name="CritterNameText" type="Label" parent="Background/GameStatsContainer/GameStatsColumns/DetailsContainer/CritterNameContainer"]
margin_right = 250.0
margin_bottom = 20.0
rect_min_size = Vector2( 250, 0 )
text = "Name"

[node name="CritterName" type="Label" parent="Background/GameStatsContainer/GameStatsColumns/DetailsContainer/CritterNameContainer"]
margin_left = 254.0
margin_right = 377.0
margin_bottom = 20.0
rect_min_size = Vector2( 123, 0 )
text = "-"
align = 2

[node name="RaceContainer" type="HBoxContainer" parent="Background/GameStatsContainer/GameStatsColumns/DetailsContainer"]
margin_top = 120.0
margin_right = 377.0
margin_bottom = 140.0
rect_min_size = Vector2( 377, 0 )

[node name="RaceText" type="Label" parent="Background/GameStatsContainer/GameStatsColumns/DetailsContainer/RaceContainer"]
margin_right = 250.0
margin_bottom = 20.0
rect_min_size = Vector2( 250, 0 )
text = "Race"

[node name="Race" type="Label" parent="Background/GameStatsContainer/GameStatsColumns/DetailsContainer/RaceContainer"]
margin_left = 254.0
margin_right = 377.0
margin_bottom = 20.0
rect_min_size = Vector2( 123, 0 )
text = "-"
align = 2

[node name="AlignmentContainer" type="HBoxContainer" parent="Background/GameStatsContainer/GameStatsColumns/DetailsContainer"]
margin_top = 144.0
margin_right = 377.0
margin_bottom = 164.0
rect_min_size = Vector2( 377, 0 )

[node name="AlignmentText" type="Label" parent="Background/GameStatsContainer/GameStatsColumns/DetailsContainer/AlignmentContainer"]
margin_right = 250.0
margin_bottom = 20.0
rect_min_size = Vector2( 250, 0 )
text = "Alignment"

[node name="Alignment" type="Label" parent="Background/GameStatsContainer/GameStatsColumns/DetailsContainer/AlignmentContainer"]
margin_left = 254.0
margin_right = 377.0
margin_bottom = 20.0
rect_min_size = Vector2( 123, 0 )
text = "-"
align = 2

[node name="ACContainer" type="HBoxContainer" parent="Background/GameStatsContainer/GameStatsColumns/DetailsContainer"]
margin_top = 168.0
margin_right = 377.0
margin_bottom = 188.0
rect_min_size = Vector2( 377, 0 )

[node name="ACText" type="Label" parent="Background/GameStatsContainer/GameStatsColumns/DetailsContainer/ACContainer"]
margin_right = 250.0
margin_bottom = 20.0
rect_min_size = Vector2( 250, 0 )
text = "AC"

[node name="AC" type="Label" parent="Background/GameStatsContainer/GameStatsColumns/DetailsContainer/ACContainer"]
margin_left = 254.0
margin_right = 377.0
margin_bottom = 20.0
rect_min_size = Vector2( 123, 0 )
text = "-"
align = 2

[node name="AttacksContainer" type="HBoxContainer" parent="Background/GameStatsContainer/GameStatsColumns/DetailsContainer"]
visible = false
margin_top = 192.0
margin_right = 377.0
margin_bottom = 212.0
rect_min_size = Vector2( 377, 0 )

[node name="AlignmentText" type="Label" parent="Background/GameStatsContainer/GameStatsColumns/DetailsContainer/AttacksContainer"]
margin_right = 250.0
margin_bottom = 20.0
rect_min_size = Vector2( 250, 0 )
text = "Alignment"

[node name="Alignment" type="Label" parent="Background/GameStatsContainer/GameStatsColumns/DetailsContainer/AttacksContainer"]
margin_left = 254.0
margin_right = 377.0
margin_bottom = 20.0
rect_min_size = Vector2( 123, 0 )
text = "-"
align = 2

[node name="HitsContainer" type="HBoxContainer" parent="Background/GameStatsContainer/GameStatsColumns/DetailsContainer"]
visible = false
margin_top = 192.0
margin_right = 377.0
margin_bottom = 212.0
rect_min_size = Vector2( 377, 0 )

[node name="AlignmentText" type="Label" parent="Background/GameStatsContainer/GameStatsColumns/DetailsContainer/HitsContainer"]
margin_right = 250.0
margin_bottom = 20.0
rect_min_size = Vector2( 250, 0 )
text = "Alignment"

[node name="Alignment" type="Label" parent="Background/GameStatsContainer/GameStatsColumns/DetailsContainer/HitsContainer"]
margin_left = 254.0
margin_right = 377.0
margin_bottom = 20.0
rect_min_size = Vector2( 123, 0 )
text = "-"
align = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="Background/GameStatsContainer/GameStatsColumns"]
margin_left = 381.0
margin_right = 741.0
margin_bottom = 292.0
rect_min_size = Vector2( 360, 0 )

[node name="ResistancesContainer" type="GridContainer" parent="Background/GameStatsContainer/GameStatsColumns"]
margin_left = 745.0
margin_right = 1105.0
margin_bottom = 292.0
rect_min_size = Vector2( 360, 0 )
columns = 8
